fix scrollbar on desktop topic and post

--- a/frontend/web/less/desktop/landing.less
+++ b/frontend/web/less/desktop/landing.less
@@ -1,4 +1,12 @@
 .wrap{
+  .mCustomScrollbar {
+      .mCSB_inside > .mCSB_container{
+        margin-right: 0;
+      }
+      .mCSB_scrollTools{
+        width: 
+      }
+  }
   .navbar-inverse{
     background: #5888ac;
   }
