--- a/frontend/web/less/mobile/post.less
+++ b/frontend/web/less/mobile/post.less
@@ -315,7 +315,7 @@
     .container_post{
         height: auto;
         width: 100%;
-        margin: 148px auto 40px;
+        margin: 147px auto 40px;
         z-index: 5;
         &.open{
              margin: 190px auto 40px;
